# 3D-Ising-CFT-Bootstrap

./: .gitignore  ACTION_REQUIRED_2026-02-11.md  BUGFIX_2026-02-11_WALLTIME_PARSING.md  CHANGELOG_2026-02-10.md  CLAUDE.md  EXTERNAL_REVIEW_REQUEST.md  HANDOFF_2026-02-10_ERROR_HANDLING_FIX.md  HANDOFF_2026-02-11_STRICT_SEMANTICS_MERGED.md  MONITOR.sh  Makefile  PETITION_SUMMARY.md  PIPELINE_STATUS_2026-02-10.md  README.md  STATUS_2026-02-11.md  cluster.md  environment.yml  monitor_jobs.sh  monitor_tests.sh  pyproject.toml
config/: .env.notifications.example  .env.validation.example
docs/: BRANCH_REVIEW_CHECKLIST_2026-02-11.md  CLUSTER_SETUP.md  DEVELOPMENT.md  LP_CONDITIONING_BUG.md  MEMORY_INCREASE_64G.md  MEMORY_REQUIREMENTS_ANALYSIS.md  MONITORING_SETUP.md  MPMATH_PRECISION_FIX_PLAN.md  OVERNIGHT_TIMEOUT_ANALYSIS_2026-02-12.md  PLAN_SUMMARY.md  PROGRESS.md  RUN.md  SAPPHIRE_MIGRATION_CHECKLIST.md  SDPB_MPI_FIX.md  SDPB_RUNTIME_ENVELOPE_2026-02-11.md  SESSION_LOG.md  STAGEA_ROOT_CAUSE_2026-02-16.md  TODO.md  implementation_choices.md
jobs/: check_usage.sh  consolidate_cache.py  consolidate_cache.slurm  diagnose_lp.slurm  final_merge_and_plot.slurm  merge_stage_a.sh  merge_stage_a_and_submit_b.slurm  merge_stage_a_job.slurm  merge_stage_a_pilot.sh  merge_stage_b.sh  overnight_full_pipeline.sh  precompute.slurm  precompute_array.slurm  progressive_validation.slurm  quick_test.sh  run_pipeline.sh  setup_env.sh  stage_a.slurm  stage_a_extended.slurm  stage_a_pilot_sdpb.slurm  stage_a_sdpb.slurm  stage_b.slurm  stage_b_extended.slurm  stage_b_sdpb.slurm  stage_b_smoke_sdpb.slurm  submit_stage_a_runtime_envelope.sh  submit_stage_b_smoke.sh  test_error_detection.slurm  test_gates.slurm  test_sufficient_memory.slurm  (+1 more)
(+52 files in other folders)
